--- a/src/city-picker/city-picker.less
+++ b/src/city-picker/city-picker.less
@@ -1,23 +1,33 @@
 .city-picker-container {
-  // position: absolute;
-  // left: 0;
-  // right: 0;
-  // top: 0;
-  // bottom: 0;
-  // background: #fff;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  font-size: 14px;
+  box-sizing: border-box;
+  .header {
+    padding: 0 20px;
+    margin-bottom: 10px;
+    .search {
+      box-sizing: border-box;
+      width: 100%;
+      height: 36px;
+      padding-left: 8px;
+      outline: none;
+      border: 0;
+      border-bottom: 1px solid #ccc;
+    }
+  }
   .city {
     display: flex;
-    position: absolute;
-    width: 100%;
-    top: 44px;
-    bottom: 0;
+    height: 100%;
     .left-city-wrapper {
       flex: 1 0 auto;
       overflow-y: auto;
       .title {
         height: 20px;
         line-height: 20px;
-        padding-left: 0.4rem;
+        padding-left: 20px;
         background: #F4F6F8;
         font-size: 12px;
       }
@@ -27,9 +37,8 @@
           line-height: 40px;
           padding-right: 30px;
           background: #fff;
-          font-size: 14px;
           .text {
-            padding-left: 0.4rem;
+            padding-left: 20px;
           }
         }
         .city-item:not(:first-child) {
@@ -40,7 +49,7 @@
       }
     }
     .right-letter {
-      padding: 15px 0;
+      padding: 20px 0;
       overflow-y: auto;
       position: absolute;
       right: 0;
